--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ flutter:
     - image/image_fhoto_age/ten.png
     - image/image_fhoto_age/eleven.png
     - image/image_fhoto_age/twelve.png
+    - image/image_screen_ height_weight/weight.png
+    - image/image_screen_ height_weight/height.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
